--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -5,6 +5,8 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "outDir": "dist",
+    "rootDir": "src",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
